--- a/tastes/templates/tastes/songs.html
+++ b/tastes/templates/tastes/songs.html
@@ -3,6 +3,7 @@
         <th>&nbsp;</th>
         <th>Name</th>
         <th>Artist</th>
+        <th>Albums</th>
         <th>Rating</th>
         <th>Energy</th>
         <th>Mood</th>
@@ -14,6 +15,7 @@
             <td>{% if song.starred %}*{% else %}&nbsp;{% endif %}</td>
             <td>{{ song.name }}</td>
             <td>{{ song.artist }}</td>
+            <td>{{ song.albums }}</td>
             <td>{{ song.rating }}</td>
             <td>{{ song.energy }}</td>
             <td>{{ song.mood }}</td>
