--- a/tastes/templates/tastes/songs.html
+++ b/tastes/templates/tastes/songs.html
@@ -1,27 +1,39 @@
-<a href="{% url "export" %}">Export</a>
-<table>
-    <thead>
-        <th>&nbsp;</th>
-        <th>Name</th>
-        <th>Artist</th>
-        <th>Albums</th>
-        <th>Rating</th>
-        <th>Energy</th>
-        <th>Mood</th>
-        <th>Tags</th>
-    </thead>
-    <tbody>
-    {% for song in songs %}
-        <tr>
-            <td>{% if song.starred %}*{% else %}&nbsp;{% endif %}</td>
-            <td>{{ song.name }}</td>
-            <td>{{ song.artist }}</td>
-            <td>{{ song.albums }}</td>
-            <td>{{ song.rating }}</td>
-            <td>{{ song.energy }}</td>
-            <td>{{ song.mood }}</td>
-            <td>{{ song.tags }}</td>
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
+{% extends 'tastes/base.html' %}
+
+{% block body %}
+<div class="ui left labeled button {{ color }}" tabindex="0">
+    <a class="ui basic right pointing label">
+        0
+    </a>
+    <a class="ui button {{ color }}" href="{% url "export" %}">
+        <i class="download icon"></i> Download
+    </a>
+</div>
+
+    <table>
+        <thead>
+            <th>&nbsp;</th>
+            <th>Name</th>
+            <th>Artist</th>
+            <th>Albums</th>
+            <th>Rating</th>
+            <th>Energy</th>
+            <th>Mood</th>
+            <th>Tags</th>
+        </thead>
+        <tbody>
+        {% for song in songs %}
+            <tr>
+                <td>{% if song.starred %}*{% else %}&nbsp;{% endif %}</td>
+                <td>{{ song.name }}</td>
+                <td>{{ song.artist }}</td>
+                <td>{{ song.albums }}</td>
+                <td>{{ song.rating }}</td>
+                <td>{{ song.energy }}</td>
+                <td>{{ song.mood }}</td>
+                <td>{{ song.tags }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+{% endblock body %}
