--- a/tastes/templates/tastes/base.html
+++ b/tastes/templates/tastes/base.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css" />
         <title>Tastes</title>
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
+        <script src="/static/tastes/js/tastes.js"></script>
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <div class="ui grid divided">
+            <div class="three wide column">
+                <div class="ui left labeled button" tabindex="0">
+                    <a class="ui button basic {{ color }}" href="{% url "export" %}">
+                        <i class="download icon"></i> Download
+                    </a>
+                    <a class="ui basic left pointing label {{ color }}" id="song-count"></a>
+                </div>
+            </div>
+            <div class="thirteen wide column">
+                {% block content %}{% endblock %}
+            </div>
+        </div>
+        <div id="data-urls"
+             data-song-list="{% url "song_list" %}">
+        </div>
+        {% block templates %}{% endblock %}
     </body>
 </html>
