--- a/tastes/templates/tastes/songs.html
+++ b/tastes/templates/tastes/songs.html
@@ -1,17 +1,7 @@
 {% extends 'tastes/base.html' %}
-{% load humanize %}
 
-{% block body %}
-<div class="ui left labeled button {{ color }}" tabindex="0">
-    <a class="ui basic right pointing label">
-        {{ count|intcomma }}
-    </a>
-    <a class="ui button {{ color }}" href="{% url "export" %}">
-        <i class="download icon"></i> Download
-    </a>
-</div>
-
-    <table>
+{% block content %}
+    <table id="song-table">
         <thead>
             <th>&nbsp;</th>
             <th>Name</th>
@@ -22,19 +12,21 @@
             <th>Mood</th>
             <th>Tags</th>
         </thead>
-        <tbody>
-        {% for song in songs %}
-            <tr>
-                <td>{% if song.starred %}*{% else %}&nbsp;{% endif %}</td>
-                <td>{{ song.name }}</td>
-                <td>{{ song.artist }}</td>
-                <td>{{ song.albums }}</td>
-                <td>{{ song.rating }}</td>
-                <td>{{ song.energy }}</td>
-                <td>{{ song.mood }}</td>
-                <td>{{ song.tags }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
+        <tbody></tbody>
     </table>
-{% endblock body %}
+{% endblock content %}
+
+{% block templates %}
+    <script type="text/html" id="song-row">
+        <tr>
+            <td><% if (starred) { %>*<% } %></td>
+            <td><%= name %></td>
+            <td><%= artist %></td>
+            <td><%= albums %></td>
+            <td><%= rating %></td>
+            <td><%= energy %></td>
+            <td><%= mood %></td>
+            <td><%= tags %></td>
+        </tr>
+    </script>
+{% endblock templates %}
