Switch over to bootstrap

--- a/tastes/templates/tastes/songs.html
+++ b/tastes/templates/tastes/songs.html
@@ -1,7 +1,7 @@
 {% extends 'tastes/base.html' %}
 
 {% block content %}
-    <table id="song-table">
+    <table id="song-table" class="table table-striped">
         <thead>
             <th>&nbsp;</th>
             <th>Name</th>
