--- a/tastes/templates/tastes/base.html
+++ b/tastes/templates/tastes/base.html
@@ -2,25 +2,33 @@
 <html>
     <head>
         <title>Tastes</title>
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css" />
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.css" />
         <link rel="stylesheet" type="text/css" href="/static/tastes/style/tastes.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
         <script src="/static/tastes/js/tastes.js"></script>
     </head>
     <body>
-        <div class="ui grid divided">
-            <div class="three wide column" id="menu-column">
-                <div class="ui left labeled button">
-                    <a class="ui button basic {{ color }}" href="{% url "export" %}">
-                        <i class="download icon"></i> Download
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-3" id="menu-column">
+                    <a class="btn btn-info" href="{% url "export" %}">
+                        <i class="oi oi-cloud-download"></i> Download
+                        <span class="badge badge-light"i id="song-count"></span>
                     </a>
-                    <a class="ui basic left pointing label {{ color }}" id="song-count"></a>
+                    <a class="btn btn-outline-info"><i class="oi oi-plus"></i> Tag</a>
+                    <a class="btn btn-outline-info"><i class="oi oi-plus"></i> Artist</a>
+                    <a class="btn btn-outline-info"><i class="oi oi-plus"></i> Name</a>
+                    <a class="btn btn-outline-info"><i class="oi oi-plus"></i> Rating</a>
+                    <a class="btn btn-outline-info"><i class="oi oi-plus"></i> Energy</a>
+                    <a class="btn btn-outline-info"><i class="oi oi-plus"></i> Mood</a>
+                    <a class="btn btn-outline-info"><i class="oi oi-plus"></i> Starred</a>
                 </div>
-            </div>
-            <div class="thirteen wide column" id="content-column">
-                <div class="scroll-container">
-                {% block content %}{% endblock %}
+                <div class="col-9" id="content-column">
+                    <div class="scroll-container">
+                    {% block content %}{% endblock %}
+                    </div>
                 </div>
             </div>
         </div>
