--- a/tastes/templates/tastes/partials/modal_filter_text.html
+++ b/tastes/templates/tastes/partials/modal_filter_text.html
@@ -9,11 +9,11 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text">is</span>
                     </div>
-                    <input class="form-control" />
+                    <input class="form-control rhs" />
                 </div>
             </div>
             <div class="col">
-                <button class="btn btn-info btn-block">Onward</button>
+                <button class="btn btn-info btn-block" data-op="=">Onward</button>
             </div>
         </div>
     </div>
@@ -24,11 +24,11 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text">like</span>
                     </div>
-                    <input class="form-control" />
+                    <input class="form-control rhs" />
                 </div>
             </div>
             <div class="col">
-                <button class="btn btn-info btn-block">Onward</button>
+                <button class="btn btn-info btn-block" data-op="=*">Onward</button>
             </div>
         </div>
     </div>
