--- a/tastes/templates/tastes/partials/modal_filter_base.html
+++ b/tastes/templates/tastes/partials/modal_filter_base.html
@@ -3,7 +3,7 @@
     {{ name }}
 </a>
 
-<div class="modal fade" id="filter-modal-{{ name|lower }}" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade filter-modal" id="filter-modal-{{ name|lower }}" tabindex="-1" role="dialog" aria-hidden="true" data-lhs="{{ lhs }}">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
