--- a/tastes/templates/tastes/partials/modal_filter_rating.html
+++ b/tastes/templates/tastes/partials/modal_filter_rating.html
@@ -4,33 +4,33 @@
 <div class="container">
     <div class="form-group">
         <div class="form-row">
-            <div class="col"><button class="btn btn-outline-info btn-block">*****</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="=" data-rhs="5">*****</button></div>
         </div>
     </div>
     <div class="form-group">
         <div class="form-row">
-            <div class="col"><button class="btn btn-outline-info btn-block">****</button></div>
-            <div class="col"><button class="btn btn-outline-info btn-block">at least ****</button></div>
-            <div class="col"><button class="btn btn-outline-info btn-block">at most ****</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="=" data-rhs="4">****</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op=">=" data-rhs="4">at least ****</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="<=" data-rhs="4">at most ****</button></div>
         </div>
     </div>
     <div class="form-group">
         <div class="form-row">
-            <div class="col"><button class="btn btn-outline-info btn-block">***</button></div>
-            <div class="col"><button class="btn btn-outline-info btn-block">at least ***</button></div>
-            <div class="col"><button class="btn btn-outline-info btn-block">at most ***</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="=" data-rhs="3">***</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op=">=" data-rhs="3">at least ***</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="<=" data-rhs="3">at most ***</button></div>
         </div>
     </div>
     <div class="form-group">
         <div class="form-row">
-            <div class="col"><button class="btn btn-outline-info btn-block">**</button></div>
-            <div class="col"><button class="btn btn-outline-info btn-block">at least **</button></div>
-            <div class="col"><button class="btn btn-outline-info btn-block">at most **</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="=" data-rhs="2">**</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op=">=" data-rhs="2">at least **</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="<=" data-rhs="2">at most **</button></div>
         </div>
     </div>
     <div class="form-group">
         <div class="form-row">
-            <div class="col"><button class="btn btn-outline-info btn-block">*</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="=" data-rhs="1">*</button></div>
         </div>
     </div>
 </div>
