Close modal on button click

--- a/tastes/templates/tastes/partials/modal_filter_bool.html
+++ b/tastes/templates/tastes/partials/modal_filter_bool.html
@@ -3,10 +3,10 @@
 {% block body %}
 <div class="container">
     <div class="form-group">
-        <button class="btn btn-info btn-block" data-op="=" data-rhs="1">On</button>
+        <button class="btn btn-info btn-block" data-op="=" data-rhs="1" data-dismiss="modal">On</button>
     </div>
     <div class="form-group">
-        <button class="btn btn-info btn-block" data-op="=" data-rhs="0">Off</button>
+        <button class="btn btn-info btn-block" data-op="=" data-rhs="0" data-dismiss="modal">Off</button>
     </div>
 </div>
 {% endblock %}
