--- a/tastes/templates/tastes/partials/modal_filter_rating.html
+++ b/tastes/templates/tastes/partials/modal_filter_rating.html
@@ -4,33 +4,33 @@
 <div class="container">
     <div class="form-group">
         <div class="form-row">
-            <div class="col"><button class="btn btn-outline-info btn-block" data-op="=" data-rhs="5">*****</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="=" data-rhs="5" data-dismiss="modal">*****</button></div>
         </div>
     </div>
     <div class="form-group">
         <div class="form-row">
-            <div class="col"><button class="btn btn-outline-info btn-block" data-op="=" data-rhs="4">****</button></div>
-            <div class="col"><button class="btn btn-outline-info btn-block" data-op=">=" data-rhs="4">at least ****</button></div>
-            <div class="col"><button class="btn btn-outline-info btn-block" data-op="<=" data-rhs="4">at most ****</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="=" data-rhs="4" data-dismiss="modal">****</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op=">=" data-rhs="4" data-dismiss="modal">at least ****</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="<=" data-rhs="4" data-dismiss="modal">at most ****</button></div>
         </div>
     </div>
     <div class="form-group">
         <div class="form-row">
-            <div class="col"><button class="btn btn-outline-info btn-block" data-op="=" data-rhs="3">***</button></div>
-            <div class="col"><button class="btn btn-outline-info btn-block" data-op=">=" data-rhs="3">at least ***</button></div>
-            <div class="col"><button class="btn btn-outline-info btn-block" data-op="<=" data-rhs="3">at most ***</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="=" data-rhs="3" data-dismiss="modal">***</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op=">=" data-rhs="3" data-dismiss="modal">at least ***</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="<=" data-rhs="3"data-dismiss="modal">at most ***</button></div>
         </div>
     </div>
     <div class="form-group">
         <div class="form-row">
-            <div class="col"><button class="btn btn-outline-info btn-block" data-op="=" data-rhs="2">**</button></div>
-            <div class="col"><button class="btn btn-outline-info btn-block" data-op=">=" data-rhs="2">at least **</button></div>
-            <div class="col"><button class="btn btn-outline-info btn-block" data-op="<=" data-rhs="2">at most **</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="=" data-rhs="2" data-dismiss="modal">**</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op=">=" data-rhs="2" data-dismiss="modal">at least **</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="<=" data-rhs="2" data-dismiss="modal">at most **</button></div>
         </div>
     </div>
     <div class="form-group">
         <div class="form-row">
-            <div class="col"><button class="btn btn-outline-info btn-block" data-op="=" data-rhs="1">*</button></div>
+            <div class="col"><button class="btn btn-outline-info btn-block" data-op="=" data-rhs="1" data-dismiss="modal">*</button></div>
         </div>
     </div>
 </div>
