--- a/tastes/templates/tastes/partials/modal_filter_text.html
+++ b/tastes/templates/tastes/partials/modal_filter_text.html
@@ -13,7 +13,7 @@
                 </div>
             </div>
             <div class="col">
-                <button class="btn btn-info btn-block" data-op="=">Onward</button>
+                <button class="btn btn-info btn-block" data-op="=" data-dismiss="modal">Onward</button>
             </div>
         </div>
     </div>
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="col">
-                <button class="btn btn-info btn-block" data-op="=*">Onward</button>
+                <button class="btn btn-info btn-block" data-op="=*" data-dismiss="modal">Onward</button>
             </div>
         </div>
     </div>
