--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -1,34 +1,53 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>rhyme</title>
+        <title>Rhyme</title>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.css" />
         <link rel="stylesheet" type="text/css" href="/static/fontawesome/css/all.css" />
         <link rel="stylesheet" type="text/less" href="/static/rhyme/style/rhyme.less" />
 
+        <!-- TODO: bower or yarn -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.7.1/less.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+
         <script src="/static/rhyme/js/rhyme.js"></script>
     </head>
     <body>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-3">
-                    <a class="btn btn-info" href="{% url "export" %}">
+        <div class="navbar-container">
+            <nav class="navbar navbar-default">
+                <a class='navbar-brand' href='#'>Rhyme</a>
+                <div class="pull-right">
+                    <a class="btn btn-info btn-sm" href="{% url "export" %}">
                         <i class="fa fa-cloud-download"></i> Download All Songs
                         <span class="badge badge-light"i id="song-count"></span>
                     </a>
                 </div>
-                <div class="col-sm-9">
-                    <div class="scroll-container">
-                    {% block content %}{% endblock %}
-                    </div>
-                </div>
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href='{% url "index" %}'>
+                            <i class="fas fa-music"></i>
+                            Songs
+                        </a>
+                    </li>
+                    <li class=''>
+                        <a href='{% url "albums" %}'>
+                            <i class="fas fa-compact-disc"></i>
+                            Albums
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+        <div id="infinite-scroll-container" style="position: absolute; overflow-y: auto; top: 100px; bottom: 0; left: 0; right: 0;">
+            <div class="scroll-container">
+                {% block content %}{% endblock %}
             </div>
         </div>
+
         <div id="data-urls"
              data-song-list="{% url "song_list" %}">
         </div>
