Ported over most of LESS

--- a/rhyme/static/rhyme/style/rhyme.less
+++ b/rhyme/static/rhyme/style/rhyme.less
@@ -1,8 +1,5 @@
-#infinite-scroll-container {
-    position: absolute;
-    overflow-y: auto;
-    top: 100px;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
+@import "albums.less";
+@import "base.less";
+@import "defaults.less";
+@import "filters.less";
+@import "structure.less";
