Added name and artist

--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -11,6 +11,8 @@
                         Export
                     </a>
                 </div>
+                <div class="name">{{ album.name }}</div>
+                <div class="artist">{{ album.artist }}</div>
             </div>
         {% endfor %}
     </div>
