--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -4,12 +4,16 @@
     <div class="albums clearfix">
         {% for album in albums %}
             <div data-id="{{ album.id }}" class="album clearfix">
-                <div class="cover-art missing">
-                    <div class="acronym-{{ album.acronym_size }}">{{ album.acronym }}</div>
-                    <a class="btn btn-info" href="{% url "export_album" album.id %}" style="position: absolute; bottom: 10px; left: 60px;">
-                        <i class="fa fa-cloud-download"></i>
-                        Export
-                    </a>
+                <div class="cover-art{% if not album.cover_art_filename %} missing{% endif %}">
+                    {% if album.cover_art_filename %}
+                        <img src='{{ album.cover_art_filename }}' />
+                    {% else %}
+                        <div class="acronym-{{ album.acronym_size }}">{{ album.acronym }}</div>
+                        <a class="btn btn-info" href="{% url "export_album" album.id %}" style="position: absolute; bottom: 10px; left: 60px;">
+                            <i class="fa fa-cloud-download"></i>
+                            Export
+                        </a>
+                    {% endif %}
                 </div>
                 <div class="name">{{ album.name }}</div>
                 <div class="artist">{{ album.artist }}</div>
