--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -14,6 +14,11 @@
                             Export
                         </a>
                     {% endif %}
+                    <div class="details-background">
+                        <div class="details">
+                            <div>Acquired {{ album.date_acquired }}</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="name">{{ album.name }}</div>
                 <div class="artist">{{ album.artist }}</div>
