--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -1,24 +1,27 @@
-{#% extends "blog/base.html" %#}
+{% extends "orange/base.html" %}
 
-{% block content %}
+{% block body %}
     {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
+        <div class="alert alert-danger">Your username and password didn't match. Please try again.</div>
     {% endif %}
 
     <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
+        {% csrf_token %}
+        <!-- TODO: make this look like something -->
         <table>
-        <tr>
-            <td>{{ form.username.label_tag }}</td>
-            <td>{{ form.username }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.password.label_tag }}</td>
-            <td>{{ form.password }}</td>
-        </tr>
+            <tbody>
+                <tr>
+                    <td>{{ form.username.label_tag }}</td>
+                    <td>{{ form.username }}</td>
+                </tr>
+                <tr>
+                    <td>{{ form.password.label_tag }}</td>
+                    <td>{{ form.password }}</td>
+                </tr>
+            </tbody>
         </table>
 
         <input type="submit" value="login" />
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
-{% endblock %}
+{% endblock body %}
