--- a/rhyme/static/rhyme/style/albums.less
+++ b/rhyme/static/rhyme/style/albums.less
@@ -43,6 +43,7 @@
             padding: @spacingNarrow;
             opacity: 1;
             text-align: left;
+            color: @defaultFontColor;
 
             .rating {
                 width: 60px;
@@ -50,6 +51,9 @@
 
             .ratings, .tags {
                 text-align: center;
+            }
+
+            .tags {
                 line-height: 1.5;
             }
         }
