--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -36,7 +36,10 @@
                                 <div class="rating">{% include "rhyme/partials/rating.html" with rating_attribute="stats.energy.min" icon="fire" %}</div>
                                 <div class="rating">{% include "rhyme/partials/rating.html" with rating_attribute="stats.mood.min" icon="heart" %}</div>
                             </div>
-                            <div><%= completion_text %></div>
+                            <br>
+                            <% if (completion_text) { %>
+                                <div><%= completion_text %></div>
+                            <% } %>
                             <div class="tags">
                                 <% _.each(tags, function(tag) { %>
                                     <div><%= tag %></div>
