--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -1,6 +1,7 @@
 {% extends 'rhyme/base.html' %}
 
 {% block content %}
+    {% include "rhyme/partials/infinite_scroll_item_count.html" with text="albums" %}
     <div class="infinite-scroll-container" data-url="{% url "album_list" %}" data-template="#album-template">
         <div class="infinite-scroll-data albums clearfix"></div>
     </div>
