--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -47,10 +47,9 @@
                                 <% }) %>
                             </div>
                         </div>
-                        <a class="btn btn-info" href="<%= export_url %>" style="position: absolute; bottom: 10px; left: 60px;">
-                            <i class="fa fa-cloud-download"></i>
-                            Export
-                        </a>
+                        <div style="position: absolute; bottom: 10px; right: 10px;">
+                            {% include "rhyme/partials/export_action.html" with url="<%= export_url %>" %}
+                        </div>
                     </div>
                 </div>
             </div>
