--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -17,9 +17,8 @@
         <nav class="navbar navbar-default">
             <a class='navbar-brand' href='#'>Rhyme</a>
             <div class="pull-right">
-                <a class="btn btn-info btn-sm" href="{% url "export" %}">
-                    <i class="fa fa-cloud-download"></i> Download All Songs
-                </a>
+                {% url "export" as export_url %}
+                {% include "rhyme/partials/export_action.html" with url=export_url %}
             </div>
             <ul class="nav navbar-nav">
                 <li>
