Added support for export views to adjust path based on export config

--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -9,7 +9,7 @@
 {% endblock style %}
 
 {% block js %}
-    <script src="/static/rhyme/js/rhyme.js"></script>
+    <script src="/static/rhyme/js/infinite_scroll.js"></script>
 {% endblock js %}
 
 {% block body %}
