--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -1,5 +1,16 @@
 {% extends 'rhyme/base.html' %}
 
+{% block js %}{{ block.super }}
+    <script src="/static/rhyme/js/albums.js"></script>
+{% endblock js %}
+
+{% block controls %}{{ block.super }}
+    <button type="button" class="btn btn-xs btn-info" id="add-album">
+        <span class="fas fa-plus"></span>
+        New
+    </button>
+{% endblock controls %}
+
 {% block content %}
     {% include "rhyme/partials/infinite_scroll_item_count.html" with text="albums" %}
     <div class="infinite-scroll-container" data-url="{% url "album_list" %}" data-template="#album-template">
@@ -58,3 +69,53 @@
         </div>
     </script>
 {% endblock templates %}
+
+{% block modals %}
+    <div id="new-album" class="modal">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+                    </button>
+                    <h4>
+                        <input type='text' name='name' placeholder='album' />
+                        <label>
+                            <input type='checkbox' name='ismix' />
+                            is mix
+                        </label>
+                    </h4>
+                </div>
+                <div class="modal-body">
+                    <table>
+                        <tr class='song hide'>
+                            <td class='ordinal'>0</td>
+                            <td><input type='text' name='name' placeholder='song' /></td>
+                            <td><input type='text' name='artist' placeholder='artist' /></td>
+                            <td>
+                                <input type='text' name='minutes' placeholder='0' />
+                                :
+                                <input type='text' name='seconds' placeholder='00' />
+                            </td>
+                            <td><span class='fas fa-trash'></span></td>
+                        </tr>
+                    </table>
+                    <div id="add-song">
+                        <button class='btn btn-default btn-large'>
+                            <span class='fas fa-plus'></span>
+                        </button>
+                        <input type='text' value='1' />
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button id='cancel-add-album' class='btn btn-default btn-large'>
+                        Cancel
+                    </button>
+                    <button id='save-album' class='btn btn-primary btn-large'>
+                        Save
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
