--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -72,50 +72,53 @@
 
 {% block modals %}
     <div id="new-album" class="modal">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">
-                        <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
-                    </button>
-                    <h4>
-                        <input type='text' name='name' placeholder='album' />
-                        <label>
-                            <input type='checkbox' name='ismix' />
-                            is mix
-                        </label>
-                    </h4>
-                </div>
-                <div class="modal-body">
-                    <table>
-                        <tr class='song hide'>
-                            <td class='ordinal'>0</td>
-                            <td><input type='text' name='name' placeholder='song' /></td>
-                            <td><input type='text' name='artist' placeholder='artist' /></td>
-                            <td>
-                                <input type='text' name='minutes' placeholder='0' />
-                                :
-                                <input type='text' name='seconds' placeholder='00' />
-                            </td>
-                            <td><span class='fas fa-trash'></span></td>
-                        </tr>
-                    </table>
-                    <div id="add-song">
-                        <button class='btn btn-default btn-large'>
-                            <span class='fas fa-plus'></span>
+        <form method="POST" action="{% url "new_album" %}">
+            {% csrf_token %}
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">
+                            <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
                         </button>
-                        <input type='text' value='1' />
+                        <h4>
+                            <input type='text' name='album_name' placeholder='album' />
+                            <label>
+                                <input type='checkbox' name='is_mix' />
+                                is mix
+                            </label>
+                        </h4>
+                    </div>
+                    <div class="modal-body">
+                        <table>
+                            <tr class='song hide'>
+                                <td class='ordinal'>0</td>
+                                <td><input type='text' name='song_name' placeholder='song' /></td>
+                                <td><input type='text' name='artist' placeholder='artist' /></td>
+                                <td>
+                                    <input type='text' name='minutes' placeholder='0' />
+                                    :
+                                    <input type='text' name='seconds' placeholder='00' />
+                                </td>
+                                <td><span class='fas fa-trash'></span></td>
+                            </tr>
+                        </table>
+                        <div id="add-song">
+                            <button class='btn btn-default btn-large'>
+                                <span class='fas fa-plus'></span>
+                            </button>
+                            <input type='text' value='1' />
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button id='cancel-add-album' class='btn btn-default btn-large'>
+                            Cancel
+                        </button>
+                        <button id='save-album' class='btn btn-primary btn-large'>
+                            Save
+                        </button>
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <button id='cancel-add-album' class='btn btn-default btn-large'>
-                        Cancel
-                    </button>
-                    <button id='save-album' class='btn btn-primary btn-large'>
-                        Save
-                    </button>
-                </div>
             </div>
-        </div>
+        </form>
     </div>
 {% endblock %}
