Fixed display of 'blank' icons when rating is missing

--- a/rhyme/templates/rhyme/partials/rating.html
+++ b/rhyme/templates/rhyme/partials/rating.html
@@ -1,1 +1,1 @@
-<% _.each(_.range({{ rating_attribute }}), function () { %>{% if icon %}<span class='fas fa-{{ icon }}<% if (!{{ rating_attribute }}) { %> blank<% } %>'></span>{% else %}*{% endif %}<% }) %>
+<% _.each(_.range({{ rating_attribute }} || 5), function () { %>{% if icon %}<span class='fas fa-{{ icon }}<% if (!{{ rating_attribute }}) { %> blank<% } %>'></span>{% else %}*{% endif %}<% }) %>
