--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% include "rhyme/partials/infinite_scroll_item_count.html" with text="songs" %}
     <div class="infinite-scroll-container" data-url="{% url "song_list" %}" data-template="#song-row">
-        <table id="song-table" class="table table-striped">
+        <table id="song-table" class="table table-striped table-condensed">
             <thead>
                 <th>&nbsp;</th>
                 <th>Name</th>
