Added icons to song table ratings

--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -26,10 +26,10 @@
             <td><%= name %></td>
             <td><%= artist %></td>
             <td><%= albums %></td>
-            <td><%= rating %></td>
-            <td><%= energy %></td>
-            <td><%= mood %></td>
-            <td><%= tags %></td>
+            <td><div class="rating">{% include "rhyme/partials/rating.html" with rating_attribute="rating" icon="star" %}</div></td>
+            <td><div class="rating">{% include "rhyme/partials/rating.html" with rating_attribute="energy" icon="fire" %}</div></td>
+            <td><div class="rating">{% include "rhyme/partials/rating.html" with rating_attribute="mood" icon="heart" %}</div></td>
+            <td><%= tags.join(" ") %></td>
         </tr>
     </script>
 {% endblock templates %}
