--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% include "rhyme/partials/infinite_scroll_item_count.html" with text="songs" %}
     <div class="infinite-scroll-container" data-url="{% url "song_list" %}" data-template="#song-row">
-        <table id="song-table" class="table table-striped table-condensed">
+        <table id="song-table" class="table table-striped table-condensed table-hover">
             <thead>
                 <th>&nbsp;</th>
                 <th>Name</th>
@@ -22,7 +22,9 @@
 {% block templates %}
     <script type="text/html" id="song-row">
         <tr>
-            <td><% if (starred) { %>*<% } %></td>
+            <td class="icon-cell is-starred">
+                <i class='<% if (starred) { %>fas<% } else { %>far<% } %> fa-star'></i>
+            </td>
             <td><%= name %></td>
             <td><%= artist %></td>
             <td><%= albums %></td>
