Added support for starring and unstarring songs

--- a/rhyme/static/rhyme/style/base.less
+++ b/rhyme/static/rhyme/style/base.less
@@ -131,3 +131,11 @@
         color: @updateInProgressColor !important;
     }
 }
+
+.update-failed {
+    background-color: @updateInProgressColor !important;
+
+    &.fas, &.far {
+        color: @updateInProgressColor !important;
+    }
+}
