--- a/rhyme/static/rhyme/style/songs.less
+++ b/rhyme/static/rhyme/style/songs.less
@@ -1,6 +1,6 @@
 @import "base.less";
 
-#song-table {
+.song-table {
     tr {
         td {
             border: none;
@@ -21,7 +21,6 @@
             &.icon-cell {
                 width: @fontSizeDefault + @spacingNarrow * 2;
                 color: @greyLight;
-                background-color: @backgroundColor;
                 border: none;
 
                 .far, .fas {
