--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -9,7 +9,9 @@
 {% endblock style %}
 
 {% block js %}
+    <script src="/static/rhyme/js/utils.js"></script>
     <script src="/static/rhyme/js/infinite_scroll.js"></script>
+    <script src="/static/rhyme/js/song_table.js"></script>
 {% endblock js %}
 
 {% block body %}
@@ -41,4 +43,7 @@
         {% block content %}{% endblock %}
     </div>
     {% block templates %}{% endblock %}
+    <div id="csrf-token">
+        {% csrf_token %}
+    </div>
 {% endblock body %}
